# lazytail

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_ISSUES.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  ROADMAP2.md  generate_colored_logs.sh  generate_logs.sh  generate_long_lines.sh  install.sh  lazytail.yaml  tmux.sh
.github/workflows/: aur.yml  ci.yml  nightly.yml  release-pr.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: filter.rs  render.rs
docs/: ARCHITECTURE.md  COMPRESSION.md  FLAG_DETECTION.md  HEXAGONAL_ANALYSIS.md  INDEXES.md  INDEX_STATUS.md  REVIEW.md  REVIEW_FIX_TASKS.md  research.md
docs/adr/: 001-event-driven-architecture.md  002-mmap-streaming-filter.md  003-sparse-index-file-reader.md  004-channel-based-filter-communication.md  005-vim-style-viewport.md  006-pid-source-tracking.md  007-config-discovery.md  008-flag-based-signals.md  009-multi-tab-independent-state.md  010-mcp-server.md  011-project-scoped-storage.md  README.md  (+15 more)
examples/: bench_compression.rs  bench_index_build.rs
scripts/: generate_colored_logs.sh  generate_jsonl_logs.sh  generate_logs.py  generate_mixed_logs.sh  import-iterm2-themes.sh
src/: ansi.rs  app.rs  capture.rs  dir_watcher.rs  event.rs  filter_orchestrator.rs  history.rs  lib.rs  log_source.rs  main.rs  parsing.rs  session.rs  signal.rs  source.rs  source_state.rs  tab.rs  test_utils.rs  text_wrap.rs  viewport.rs  watcher.rs
themes/: blazer.yaml  chalkboard.yaml  cobalt2.yaml  dark-pastel.yaml  desert.yaml  espresso.yaml  github.yaml  grass.yaml  harper.yaml  homebrew.yaml  hurtado.yaml  hybrid.yaml  idletoes.yaml  ir-black.yaml  jellybeans.yaml  kibble.yaml  liquidcarbon.yaml  liquidcarbontransparent.yaml  liquidcarbontransparentinverse.yaml  man-page.yaml  mathias.yaml  misterioso.yaml  molokai.yaml  monokai-soda.yaml  neopolitan.yaml  nightlion-v1.yaml  nightlion-v2.yaml  novel.yaml  obsidian.yaml  ocean.yaml  paulmillr.yaml  pro.yaml  red-alert.yaml  red-sands.yaml  seafoam-pastel.yaml  smyck.yaml  solarized-darcula.yaml  solarized-dark.yaml  solarized-light.yaml  spacegray.yaml  (+15 more)
(+135 files in other folders)
