[package]
name = "lazytail"
version = "0.2.0"
edition = "2021"
authors = ["raaymax"]
license = "MIT"
description = "A fast, universal terminal-based log viewer with live filtering and follow mode"
repository = "https://github.com/raaymax/lazytail"
keywords = ["log", "viewer", "tui", "terminal", "tail"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ansi-to-tui = "7.0"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.0"
