[package]
name = "lazytail"
version = "0.6.0"
edition = "2021"
authors = ["raaymax"]
license = "MIT"
description = "A fast, universal terminal-based log viewer with live filtering and follow mode"
repository = "https://github.com/raaymax/lazytail"
keywords = ["log", "viewer", "tui", "terminal", "tail"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ansi-to-tui = "7.0"
unicode-width = "0.2"
memmap2 = "0.9"
memchr = "2"
lru = "0.12"
rayon = "1.10"
signal-hook = "0.3"
serde-saphyr = "0.0"
strsim = "0.11"
thiserror = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
colored = "3.1"
tiny_http = "0.12"

# Self-update dependencies (optional)
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"], optional = true }

# MCP server dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
rmcp = { version = "0.1", features = ["server", "transport-io"], optional = true }
schemars = { version = "0.8", optional = true }
lz4_flex = { version = "0.12.0", optional = true }

[features]
default = ["mcp"]
mcp = ["dep:tokio", "dep:rmcp", "dep:schemars"]
self-update = ["dep:self_update"]
lz4_flex = ["dep:lz4_flex"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
